{
  "version": 4,
  "terraform_version": "1.5.4",
  "serial": 1629,
  "lineage": "4d988cfd-287b-e1ed-813f-ff829e295ff9",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:190923163911:security-group/sg-0ace19d8369dbc6ba",
            "description": "default VPC security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ace19d8369dbc6ba",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "default",
            "name_prefix": "",
            "owner_id": "190923163911",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "vpc_id": "vpc-075e4ef026a7cc18e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.sample-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "elastic-ip-01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0e6453050becf0465",
            "domain": "vpc",
            "id": "eipalloc-0e6453050becf0465",
            "network_border_group": "ap-northeast-1",
            "public_dns": "ec2-13-115-99-198.ap-northeast-1.compute.amazonaws.com",
            "public_ip": "13.115.99.198",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "elastic-ip-02",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0dbf66f188865f6ff",
            "domain": "vpc",
            "id": "eipalloc-0dbf66f188865f6ff",
            "network_border_group": "ap-northeast-1",
            "public_dns": "ec2-18-182-108-123.ap-northeast-1.compute.amazonaws.com",
            "public_ip": "18.182.108.123",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "sample-ec2-bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0e3ceefc9a200a838",
            "arn": "arn:aws:ec2:ap-northeast-1:190923163911:instance/i-035178fdc54ffa6be",
            "associate_public_ip_address": true,
            "availability_zone": "ap-northeast-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-035178fdc54ffa6be",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "hoge-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0a14ac59853f1bd3e",
            "private_dns": "ip-10-0-14-123.ap-northeast-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.14.123",
            "public_ip": "18.179.42.162",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-072069008a27aab11",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-086db85ef52a7f0a9",
              "sg-0ace19d8369dbc6ba"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0a090441dce2f4753",
            "tags": {
              "Name": "sample-ec2-bastion"
            },
            "tags_all": {
              "Name": "sample-ec2-bastion"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-086db85ef52a7f0a9",
              "sg-0ace19d8369dbc6ba"
            ]
          },
          "dependencies": [
            "aws_default_security_group.default",
            "aws_key_pair.key_pair",
            "aws_security_group.sample-sg-bastion-terraform",
            "aws_subnet.sample-subnet-public01",
            "aws_vpc.sample-vpc",
            "data.aws_ami.amzlinux2",
            "tls_private_key.keygen"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "sample-ec2-web01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0e3ceefc9a200a838",
            "arn": "arn:aws:ec2:ap-northeast-1:190923163911:instance/i-0da21247d89ff85fc",
            "associate_public_ip_address": false,
            "availability_zone": "ap-northeast-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0da21247d89ff85fc",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "hoge-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-058b67f70d746eb41",
            "private_dns": "ip-10-0-77-205.ap-northeast-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.77.205",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0f54c9b69562cf753",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-086db85ef52a7f0a9",
              "sg-0ace19d8369dbc6ba"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0b0d87aa44868a029",
            "tags": {
              "Name": "sample-ec2-web01"
            },
            "tags_all": {
              "Name": "sample-ec2-web01"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-086db85ef52a7f0a9",
              "sg-0ace19d8369dbc6ba"
            ]
          },
          "dependencies": [
            "aws_default_security_group.default",
            "aws_key_pair.key_pair",
            "aws_security_group.sample-sg-bastion-terraform",
            "aws_subnet.sample-subnet-private01",
            "aws_vpc.sample-vpc",
            "data.aws_ami.amzlinux2",
            "tls_private_key.keygen"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "sample-ec2-web02",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0e3ceefc9a200a838",
            "arn": "arn:aws:ec2:ap-northeast-1:190923163911:instance/i-0a0be9cb0369b7ec0",
            "associate_public_ip_address": false,
            "availability_zone": "ap-northeast-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0a0be9cb0369b7ec0",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "hoge-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-081c712754413d30d",
            "private_dns": "ip-10-0-95-166.ap-northeast-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.95.166",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0b778d113d4e4954b",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-0ace19d8369dbc6ba"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0aaa93ff8e2ed1f34",
            "tags": {
              "Name": "sample-ec2-web02"
            },
            "tags_all": {
              "Name": "sample-ec2-web02"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0ace19d8369dbc6ba"
            ]
          },
          "dependencies": [
            "aws_default_security_group.default",
            "aws_key_pair.key_pair",
            "aws_subnet.sample-subnet-private02",
            "aws_vpc.sample-vpc",
            "data.aws_ami.amzlinux2",
            "tls_private_key.keygen"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:190923163911:internet-gateway/igw-02bf5cbc3a346bd37",
            "id": "igw-02bf5cbc3a346bd37",
            "owner_id": "190923163911",
            "tags": {
              "Name": "sample-igw"
            },
            "tags_all": {
              "Name": "sample-igw"
            },
            "vpc_id": "vpc-075e4ef026a7cc18e"
          },
          "dependencies": [
            "aws_vpc.sample-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "sample-elb-terraform",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:190923163911:loadbalancer/app/sample-elb-terraform/08804b88988f5a45",
            "arn_suffix": "app/sample-elb-terraform/08804b88988f5a45",
            "desync_mitigation_mode": "defensive",
            "dns_name": "sample-elb-terraform-1221099061.ap-northeast-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:190923163911:loadbalancer/app/sample-elb-terraform/08804b88988f5a45",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "sample-elb-terraform",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0ace19d8369dbc6ba",
              "sg-0c6b51695b2afa9bd"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0a090441dce2f4753"
              },
              {
                "subnet_id": "subnet-0b64c7ef3ac73e833"
              }
            ],
            "subnets": [
              "subnet-0a090441dce2f4753",
              "subnet-0b64c7ef3ac73e833"
            ],
            "vpc_id": "vpc-075e4ef026a7cc18e",
            "xff_header_processing_mode": "append",
            "zone_id": "Z14GRHDCWA56QT"
          },
          "dependencies": [
            "aws_default_security_group.default",
            "aws_security_group.sample-sg-elb-terraform",
            "aws_subnet.sample-subnet-public01",
            "aws_subnet.sample-subnet-public02",
            "aws_vpc.sample-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "sample-tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:190923163911:listener/app/sample-elb-terraform/08804b88988f5a45/14ce38f09d69e94d",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-1:190923163911:targetgroup/sample-tg-terraform/b1bd98e5cc1ff3f7",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:190923163911:listener/app/sample-elb-terraform/08804b88988f5a45/14ce38f09d69e94d",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-northeast-1:190923163911:loadbalancer/app/sample-elb-terraform/08804b88988f5a45",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_default_security_group.default",
            "aws_lb.sample-elb-terraform",
            "aws_lb_target_group.sample-tg-terraform",
            "aws_security_group.sample-sg-elb-terraform",
            "aws_subnet.sample-subnet-public01",
            "aws_subnet.sample-subnet-public02",
            "aws_vpc.sample-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "sample-tg-terraform",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:190923163911:targetgroup/sample-tg-terraform/b1bd98e5cc1ff3f7",
            "arn_suffix": "targetgroup/sample-tg-terraform/b1bd98e5cc1ff3f7",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:190923163911:targetgroup/sample-tg-terraform/b1bd98e5cc1ff3f7",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "sample-tg-terraform",
            "port": 3000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-075e4ef026a7cc18e"
          },
          "dependencies": [
            "aws_vpc.sample-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "sample-target_ec01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:190923163911:targetgroup/sample-tg-terraform/b1bd98e5cc1ff3f7-20231010134308876100000008",
            "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-1:190923163911:targetgroup/sample-tg-terraform/b1bd98e5cc1ff3f7",
            "target_id": "i-0da21247d89ff85fc"
          },
          "dependencies": [
            "aws_default_security_group.default",
            "aws_instance.sample-ec2-web01",
            "aws_key_pair.key_pair",
            "aws_lb_target_group.sample-tg-terraform",
            "aws_security_group.sample-sg-bastion-terraform",
            "aws_subnet.sample-subnet-private01",
            "aws_vpc.sample-vpc",
            "data.aws_ami.amzlinux2",
            "tls_private_key.keygen"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "sample-target_ec02",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:190923163911:targetgroup/sample-tg-terraform/b1bd98e5cc1ff3f7-20231010134308679700000007",
            "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-1:190923163911:targetgroup/sample-tg-terraform/b1bd98e5cc1ff3f7",
            "target_id": "i-0a0be9cb0369b7ec0"
          },
          "dependencies": [
            "aws_default_security_group.default",
            "aws_instance.sample-ec2-web02",
            "aws_key_pair.key_pair",
            "aws_lb_target_group.sample-tg-terraform",
            "aws_subnet.sample-subnet-private02",
            "aws_vpc.sample-vpc",
            "data.aws_ami.amzlinux2",
            "tls_private_key.keygen"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "sample-ngw-01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0e6453050becf0465",
            "association_id": "eipassoc-079c5da7368b40d16",
            "connectivity_type": "public",
            "id": "nat-0a9f0550f609b192d",
            "network_interface_id": "eni-0a49e56fea3e7181a",
            "private_ip": "10.0.11.11",
            "public_ip": "13.115.99.198",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0a090441dce2f4753",
            "tags": {
              "Name": "sample-ngw-01"
            },
            "tags_all": {
              "Name": "sample-ngw-01"
            }
          },
          "dependencies": [
            "aws_eip.elastic-ip-01",
            "aws_subnet.sample-subnet-public01",
            "aws_vpc.sample-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "sample-ngw-02",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0dbf66f188865f6ff",
            "association_id": "eipassoc-07234f0117dd57f69",
            "connectivity_type": "public",
            "id": "nat-0bfb036ae6585a4bf",
            "network_interface_id": "eni-00ef0be5ba2dae628",
            "private_ip": "10.0.20.14",
            "public_ip": "18.182.108.123",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0b64c7ef3ac73e833",
            "tags": {
              "Name": "sample-ngw-02"
            },
            "tags_all": {
              "Name": "sample-ngw-02"
            }
          },
          "dependencies": [
            "aws_eip.elastic-ip-02",
            "aws_subnet.sample-subnet-public02",
            "aws_vpc.sample-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "sample-rtb-private01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:190923163911:route-table/rtb-05abaae4d0c70a615",
            "id": "rtb-05abaae4d0c70a615",
            "owner_id": "190923163911",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0a9f0550f609b192d",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "10.0.0.0/16",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "local",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "sample-rtb-private01"
            },
            "tags_all": {
              "Name": "sample-rtb-private01"
            },
            "timeouts": null,
            "vpc_id": "vpc-075e4ef026a7cc18e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.elastic-ip-01",
            "aws_nat_gateway.sample-ngw-01",
            "aws_subnet.sample-subnet-public01",
            "aws_vpc.sample-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "sample-rtb-private02",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:190923163911:route-table/rtb-0ce240cd046e5d749",
            "id": "rtb-0ce240cd046e5d749",
            "owner_id": "190923163911",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0bfb036ae6585a4bf",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "10.0.0.0/16",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "local",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "sample-rtb-private02"
            },
            "tags_all": {
              "Name": "sample-rtb-private02"
            },
            "timeouts": null,
            "vpc_id": "vpc-075e4ef026a7cc18e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.elastic-ip-02",
            "aws_nat_gateway.sample-ngw-02",
            "aws_subnet.sample-subnet-public02",
            "aws_vpc.sample-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "sample-rtb-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:190923163911:route-table/rtb-06dccd6f2073f7bbc",
            "id": "rtb-06dccd6f2073f7bbc",
            "owner_id": "190923163911",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-02bf5cbc3a346bd37",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "10.0.0.0/16",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "local",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "sample-rtb-public"
            },
            "tags_all": {
              "Name": "sample-rtb-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-075e4ef026a7cc18e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.sample-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "relate-private-route-table1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fee0b142cc55c60f",
            "route_table_id": "rtb-05abaae4d0c70a615",
            "subnet_id": "subnet-0b0d87aa44868a029"
          },
          "dependencies": [
            "aws_eip.elastic-ip-01",
            "aws_nat_gateway.sample-ngw-01",
            "aws_route_table.sample-rtb-private01",
            "aws_subnet.sample-subnet-private01",
            "aws_subnet.sample-subnet-public01",
            "aws_vpc.sample-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "relate-private-route-table2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b5e24fac587299d3",
            "route_table_id": "rtb-0ce240cd046e5d749",
            "subnet_id": "subnet-0aaa93ff8e2ed1f34"
          },
          "dependencies": [
            "aws_eip.elastic-ip-02",
            "aws_nat_gateway.sample-ngw-02",
            "aws_route_table.sample-rtb-private02",
            "aws_subnet.sample-subnet-private02",
            "aws_subnet.sample-subnet-public02",
            "aws_vpc.sample-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "relate-public-route-table1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-084daa721cb621237",
            "route_table_id": "rtb-06dccd6f2073f7bbc",
            "subnet_id": "subnet-0a090441dce2f4753"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.sample-rtb-public",
            "aws_subnet.sample-subnet-public01",
            "aws_vpc.sample-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "relate-public-route-table2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e3fea17e4aff2a99",
            "route_table_id": "rtb-06dccd6f2073f7bbc",
            "subnet_id": "subnet-0b64c7ef3ac73e833"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.sample-rtb-public",
            "aws_subnet.sample-subnet-public02",
            "aws_vpc.sample-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sample-sg-bastion-terraform",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:190923163911:security-group/sg-086db85ef52a7f0a9",
            "description": "for bastion server",
            "egress": [],
            "id": "sg-086db85ef52a7f0a9",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "sample-sg-bastion-terraform",
            "name_prefix": "",
            "owner_id": "190923163911",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-075e4ef026a7cc18e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.sample-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sample-sg-elb-terraform",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:190923163911:security-group/sg-0c6b51695b2afa9bd",
            "description": "for load balancer",
            "egress": [],
            "id": "sg-0c6b51695b2afa9bd",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "sample-sg-elb-terraform",
            "name_prefix": "",
            "owner_id": "190923163911",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-075e4ef026a7cc18e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.sample-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "sample-subnet-private01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:190923163911:subnet/subnet-0b0d87aa44868a029",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "10.0.64.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b0d87aa44868a029",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "190923163911",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "sample-subnet-private01"
            },
            "tags_all": {
              "Name": "sample-subnet-private01"
            },
            "vpc_id": "vpc-075e4ef026a7cc18e"
          },
          "dependencies": [
            "aws_vpc.sample-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "sample-subnet-private02",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:190923163911:subnet/subnet-0aaa93ff8e2ed1f34",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1c",
            "availability_zone_id": "apne1-az1",
            "cidr_block": "10.0.80.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0aaa93ff8e2ed1f34",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "190923163911",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "sample-subnet-private02"
            },
            "tags_all": {
              "Name": "sample-subnet-private02"
            },
            "vpc_id": "vpc-075e4ef026a7cc18e"
          },
          "dependencies": [
            "aws_vpc.sample-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "sample-subnet-public01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:190923163911:subnet/subnet-0a090441dce2f4753",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "10.0.0.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a090441dce2f4753",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "190923163911",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "sample-subnet-public01"
            },
            "tags_all": {
              "Name": "sample-subnet-public01"
            },
            "vpc_id": "vpc-075e4ef026a7cc18e"
          },
          "dependencies": [
            "aws_vpc.sample-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "sample-subnet-public02",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:190923163911:subnet/subnet-0b64c7ef3ac73e833",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1c",
            "availability_zone_id": "apne1-az1",
            "cidr_block": "10.0.16.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b64c7ef3ac73e833",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "190923163911",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "sample-subnet-public02"
            },
            "tags_all": {
              "Name": "sample-subnet-public02"
            },
            "vpc_id": "vpc-075e4ef026a7cc18e"
          },
          "dependencies": [
            "aws_vpc.sample-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "sample-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:190923163911:vpc/vpc-075e4ef026a7cc18e",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0fa9568bae7b3fe41",
            "default_route_table_id": "rtb-0e83d43c0783f13d5",
            "default_security_group_id": "sg-0ace19d8369dbc6ba",
            "dhcp_options_id": "dopt-05f75a8d7ef0b10d8",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-075e4ef026a7cc18e",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0e83d43c0783f13d5",
            "owner_id": "190923163911",
            "tags": {
              "Name": "sample-vpc"
            },
            "tags_all": {
              "Name": "sample-vpc"
            }
          }
        }
      ]
    }
  ]
}